# AlfredQuant

./: .dockerignore  .env.development  .env.example  .env.production  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.dev  FINAL_DELIVERY_STATUS.md  Makefile  NEXT_STEPS_PLAN.md  PROJECT_COMPLETION_FINAL.md  PROJECT_COMPLETION_REPORT.md  PROJECT_DELIVERY_CHECKLIST.md  PROJECT_TEST_SUMMARY.md  README.md  alembic.ini  check_project_status.py  comprehensive_test.py  comprehensive_test_report.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  final_project_test.py  main.py  project_dashboard.py  pyproject.toml  quick_deploy.py  quick_start.py  requirements.txt  test_basic.py  test_project.py  test_report.txt  test_simple.py
.github/workflows/: ci.yml  security.yml
config/: config.development.yaml  config.production.yaml  config.staging.yaml  config.testing.yaml  config.yaml  nginx.conf  nginx.prod.conf  prometheus.prod.yml  prometheus.yml  redis.conf  redis.prod.conf
data/: sample_securities.csv
docs/: api_documentation.md  data_migration.md  deployment.md  deployment_guide.md  developer_guide.md  strategy_tutorial.md
examples/: __init__.py  backtest_example.py  cache_example.py  jq_strategy_example.py  trading_rules_example.py  wind_data_example.py
frontend/: .dockerignore  .env  .env.production  Dockerfile  Dockerfile.dev  README.md  nginx.conf
helm/quant-framework/: Chart.yaml  values.yaml
k8s/: app.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  nginx.yaml  postgres.yaml  pvc.yaml  redis.yaml  secrets.yaml  service-monitor.yaml  service.yaml  worker.yaml
migrations/: env.py
migrations/versions/: 001_initial_migration.py
quant_framework/: __init__.py
quant_framework/api/: __init__.py  dependencies.py  exceptions.py  main.py  middleware.py  models.py
quant_framework/auth/: __init__.py  auth_service.py  decorators.py  init_auth.py  models.py  permissions.py
quant_framework/backtest/: __init__.py  engine.py  reporter.py
quant_framework/cache/: __init__.py  factory.py  memory_cache.py  multi_level_cache.py  redis_cache.py
scripts/: backup.py  config_manager.py  deploy.sh  final_system_validation.py  health_check.py  health_check.sh  init_config.py  init_data.py  migrate.py  rollback.sh  run_system_tests.py  system_acceptance_test.py
tests/: conftest.py  test_config.py  test_migrations.py
(+122 files in other folders)
